namespace Enemy.AnimationStates
{
    public class DescriptionEnemyAnimation
    {
        public const string ENEMY_HIT = "Hit";
        public const string ENEMY_DEATH = "Dead";
        public const string ENEMY_RUN = "Run";
        public const string ENEMY_MELEE_WEAPON_ATTACK = "EnemyWeaponAttack";
    }
}