namespace Services
{
    public class Constants
    {
        public const string ENEMY_HIT = "Hit";
        public const string ENEMY_DEATH = "Dead";
        public const string ENEMY_RUN = "Run";
        public const string ENEMY_MELEE_WEAPON_ATTACK = "EnemyWeaponAttack";
        
        public const string PLAYER_RUN = "Run";
        public const string PLAYER_IDLE = "Idle";
        public const string PLAYER_DEATH = "Death";
        
        public const string BOMB_EXPLOSION_TRIGGER = "ExplosionTrigger";
        
        public const string PLAYER_PREFS_SKIN = "Skin";
        public const string SKIN_BY_DEFAULT = "Player_1";
    }
}